# engineering_practice

./: .gitignore  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_demo.py  workflow_logic.md  页面名词说明.md
data/: market_rules.txt
info/: 工程实践.md
src/power_market_mvp/: __init__.py  agents.py  core.py  dashboard_helpers.py  llm.py  models.py  pipeline.py  rules.py  scenario.py  utils.py
tests/: test_mvp.py
